# openGL_practice

./: .gitignore  CMakeLists.txt
glad/: CMakeLists.txt  Makefile  cmake_install.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.cpp
src/shader/: shader.cpp  shader.hpp
src/vertexArray/: vertexArray.cpp  vertexArray.hpp
src/vertex_array/: vertex_array.cpp  vertex_array.hpp
